@@ -1,0 +1,18 @@
+<html>
+
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<title>SysTray</title>
+<link rel="stylesheet" type="text/css" href="../nscplus.css">
+</head>
+
+<body>
+
+<div id="content" class="documentContent">
+<h1>SysTray.dll</h1>
+<p>A simple module to show an icon in the tray 
+when the service is running this module does not export any check commands.</p>
+</div>
+</body>
+
+</html>
